# mochi-remi

./: CMakeLists.txt  README.md  build.sh  spack.yaml
examples/: CMakeLists.txt  client-dir.c  client.c  config.json  server.c
include/remi/: remi-client.h  remi-common.h  remi-server.h
src/: CMakeLists.txt  fs-util.h  fs-util.hpp  remi-bedrock.c  remi-bedrock.cpp  remi-client.cpp  remi-config.cmake.in  remi-fileset.cpp  remi-fileset.hpp  remi-server.cpp  remi.pc.in  uuid-util.hpp
